--- a/Vue-Morty/src/assets/main.css
+++ b/Vue-Morty/src/assets/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,600;9..40,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -18,7 +18,11 @@
 
 main {
   flex-grow: 1;
+  padding-top: 140px;
+  padding-bottom: 60px;
 }
+
+
 
 html {
   font-family: 'DM Sans', sans-serif;
